fixed heading and top socials for position on mobile

--- a/style/style.scss
+++ b/style/style.scss
@@ -52,7 +52,7 @@ header {
 }
     #header_socials {
         position: relative;
-        left: 290px;
+        left: 260px;
         top: 10px;
     }
     #header_socials img {
@@ -63,17 +63,17 @@ header {
 
 .main_banner {
     // @include font-settings();
-    width: 300px;
-    height: 200px;
+    width: 280px;
+    height: 150px;
     position: relative;
-    left: 100px;
+    left: 90px;
     top: 40px;
     box-shadow: 3px 3px 5px rgb(5, 5, 5), -3px 0px 5px black;
 
     p {
         font-size: 40px;
         text-align: center;
-        padding: 70px 50px;
+        padding: 50px 30px;
     }
     
 }
